--- a/readme.Rmd
+++ b/readme.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "scripts folder"
+title: "Genotype-environment interplay in associations between maternal drinking and offspring emotional and behavioral problems: analysis code"
 output: github_document
 ---
 
@@ -7,19 +7,7 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This is the readme file for the scripts folder, written in an R Markdown format used for publishing markdown documents to GitHub.
+Description of contents...
 
-## set-up notes
 
-This folder contains scripts for data preparation and analysis for this project. 
-
-There are pre-preprared filepaths to the MoBa phenotypic data and linkage file (for merging with genetic data) in the script 01_data_prep.R
-
-The file 00_example_merge_script_MoBa_pheo_geno.R is an example script for how to merge genetic and phenotypic data.
-
-The naming convention used here is 00_>what_script_does<.R for peripheral scripts; 01_>what_first_analytic_script_does<.R... 0n_>what_nth_analytic_script_does<.R for core analytic scripts.
-
-## user notes
-
-Modify this file (readme.Rmd) to make your own notes relevant to scripts used in this project
 
